fix horizontal scroll bar (not recommended way)

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,5 +1,6 @@
 body {
     background-color: #212529 !important;
+    overflow-x: hidden;
 }
 
 .container.clamp {
